--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>너의 얼굴이 보고싶어</title>
   </head>
   <body>
     <noscript>자바스크립트를 활성화하십시오. You Must Enable JavaScript</noscript>
